--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.1.0",
+    "antd": "^3.26.9",
     "axios": "^0.19.2",
     "google-map-react": "^1.1.6",
     "history": "^4.10.1",
@@ -21,7 +22,10 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled": "^1.0.0",
+    "styled-components": "^5.0.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
