--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/user-event": "^8.1.0",
     "antd": "^3.26.9",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
     "google-map-react": "^1.1.6",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "mdbreact": "^4.25.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -25,7 +28,8 @@
     "redux-thunk": "^2.3.0",
     "styled": "^1.0.0",
     "styled-components": "^5.0.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
